--- a/src/app/modules/dashboard/components/main/main.component.less
+++ b/src/app/modules/dashboard/components/main/main.component.less
@@ -139,6 +139,20 @@ p.list-info {
   margin-bottom: 0;
 }
 
-
-
 /* END Recents Section Styles */
+
+
+
+
+/* Suggestions Section Styles */
+
+.suggestions {
+  overflow-x: scroll;
+  
+}
+
+.suggestion {
+
+}
+
+/* END Suggestions Section Styles */
