--- a/src/app/modules/dashboard/components/new-folder/new-folder.component.less
+++ b/src/app/modules/dashboard/components/new-folder/new-folder.component.less
@@ -17,3 +17,135 @@
 .folder-icon {
     font-size: 40px;
 }
+
+// Dialog
+
+.folder-dialog {
+    display: flex;
+    flex-direction: column;
+}
+
+.mat-dialog-content {
+    padding: 5px 24px;
+
+}
+
+// Dialog Header
+
+.new-folder-heading {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    // margin-bottom: 15px;
+}
+
+h2.mat-dialog-title {
+    margin: 0;
+}
+
+.new-folder-icon {
+    margin-right: 10px;
+}
+
+// Dialog Share Name
+
+.share-name {
+    margin-bottom: 10px;
+}
+
+
+// Dialog Invitees
+
+.invitees {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.invitee-actions {
+    display: flex;
+    align-items: center;
+}
+
+// Dialog Invitee Inputs
+
+.invitee-inputs {
+    display: flex;
+    flex-direction: column;
+}
+
+
+// Dialog Shared Folder Settings
+
+.folder-settings {
+    display: flex;
+    flex-direction: column;
+}
+
+// Dialog Shared Folder Settings Permissions
+
+.folder-permissions {
+    display: flex;
+    flex-direction: column;
+    margin: 15px 0;
+}
+
+.permission {
+    margin-bottom: 5px;
+    height: 50px;
+}
+
+.settings-permissions {
+    margin-bottom: 15px;
+}
+
+
+// Dialog icon colors
+
+.close-btn-color {
+    color: rgb(194, 18, 18);
+}
+
+// Dialog dividers
+
+.divider-spacing {
+    margin-bottom: 10px;
+}
+
+
+// Dialog Actions
+
+.dialog-actions {
+    display: flex;
+    justify-content: flex-end;
+    padding-bottom: 24px;
+    padding-top: 10px;
+}
+
+// Dialog Sub Header
+
+.list-subheader {
+    padding: 0px 0px 8px 0px;
+}
+
+
+// Dialog Expansion Panel
+
+.mat-expansion-panel-header-title {
+    align-items: center;
+}
+
+.mat-expansion-panel-body {
+    padding: 0 !important;
+}
+
+// .mat-expansion-panel-header {
+//     padding: 0 !important;
+// }
+
+// Panel Icons
+
+.panel-icon {
+    margin-right: 8px;
+}
