Refactored main component and its template to include user friendly messages when there are no files present in either of the favorites, recents or suggestions sections. Fixed bug in notification component, where notifications were not populating the sidenav, due to the use of 'type' keyword as an object property.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,7 @@
         <div class="navbar-end" *ngIf="(authState$ | async)">
           <button mat-mini-fab type="button" color="warm" class="mat-elevation-z1 mr-3" (click)="navigate('/account')">{{ initials$ | async }}</button>
           <button mat-icon-button (click)="setNotificationViewState($event)">
-            <mat-icon [matBadge]="(notifications$ | async).length" [matBadgeHidden]="(viewState$ | async)"
+            <mat-icon [matBadge]="(notifications$ | async).length" [matBadgeHidden]="(notificationBadgeViewState$ | async)"
               matBadgePosition="before" matBadgeColor="accent">notifications_none</mat-icon>
           </button>
         </div>
