--- a/src/app/modules/dashboard/components/main/main.component.less
+++ b/src/app/modules/dashboard/components/main/main.component.less
@@ -99,7 +99,7 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 8px 16px
+  padding: 8px 0 8px 8px;
 }
 
 /* END Favorites Section Styles */
@@ -117,7 +117,7 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 8px 16px;
+  padding: 8px 0 8px 8px;
 }
 
 .recent-icon {
@@ -148,7 +148,7 @@ p.list-info {
 
 .suggestions {
   overflow-x: scroll;
-  
+  margin: 10px;
 }
 
 .suggestion {
