--- a/src/app/modules/upload-file/components/upload-progress/upload-progress.component.less
+++ b/src/app/modules/upload-file/components/upload-progress/upload-progress.component.less
@@ -1,3 +1,23 @@
-// .mat-progress-bar {
-//     height: 10px;
-// }
+// Upload Progress Container
+
+.progress-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.progress-actions {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.progress-bar {
+    width: 100%;
+}
+
+.action-details {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
