--- a/src/app/modules/dashboard/components/repository/repository.component.less
+++ b/src/app/modules/dashboard/components/repository/repository.component.less
@@ -1,7 +1,5 @@
 /* Structure */
 
-
-
 .repository-container, .repository-wrapper {
   height: 92%;
   margin-bottom: 15px;
@@ -10,7 +8,6 @@
 
 table {
   width: 100%;
-
 }
 
 th, td {
@@ -39,7 +36,6 @@ th, td {
   margin: 15px;
 }
 
-
 /* Column Widths */
 .mat-column-createdDate {
   width: 120px;
@@ -47,7 +43,7 @@ th, td {
 
 .mat-column-select {
   width: 50px;
-  padding: 32px 17px 28px 17px !important;
+  padding: 32px 17px !important;
 }
 
 .mat-column-name {
@@ -78,7 +74,6 @@ th, td {
 
 .mat-column-action, .mat-column-createdDate, .mat-column-members {
   text-align: right;
-  justify-content: flex-end;
 }
 
 
