--- a/src/app/modules/dashboard/components/upload-details/upload-details.component.html
+++ b/src/app/modules/dashboard/components/upload-details/upload-details.component.html
@@ -1,53 +1,51 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col px-0">
-            <h2 class="m-0">Upload Details</h2>
-            <mat-divider></mat-divider>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col px-0 file-list">
-            <mat-list #fileList>
-                <mat-list-item *ngFor="let item of (files$ | async); index as i" class="px-0">
-                    <div class="container-fluid px-0">
-                        <div class="row">
-                            <div class="col-6 pl-0">
-                                <div class="list-name">{{ item.file.name }}</div>
-                            </div>
-                            <div class="col-4">
-                                {{ item.file.size | fileSize }}
-                            </div>
-                            <div class="col-auto ml-auto pr-0">
-                                <!-- <div *ngIf="(completed$ | async) as completed; then done; else loading"></div> -->
-                                <ng-container *ngTemplateOutlet="
-                                    (getFileState$(i) | async).progress === 100
-                                        ? done
-                                        : loading;
 
-                                    context: { 
-                                        index: i
-                                    }
 
-                                "></ng-container>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <upload-progress [progress]="item.progress" [key]="i" [color]="getProgressColor$(i) | async"></upload-progress>
-                            </div>
-                        </div>
-                    </div>
-                </mat-list-item>
-            </mat-list>
+<div class="upload-dialog-title">
+    <h4 mat-dialog-title>Upload Details</h4>
+    <mat-divider></mat-divider>
+</div>
+
+<div mat-dialog-content class="dialog-file-list">
+    <div class="list-items" *ngFor="let item of (files$ | async); index as i" >
+        <div class="list-item">
+            <div class="list-name">{{ item.file.name }}</div>
+
+            <div class="list-size">
+                <div>{{ item.file.size | fileSize }}</div>
+            </div>
+
+            <!-- <div *ngIf="(completed$ | async) as completed; then done; else loading"></div> -->
+            
+            <!-- <div *ngIf="item.progress < 100">
+                {{ ((selectUploadSpeed$(i) | async) | fileSize) }} 
+            </div> -->
+
+            <div class="list-actions">
+                <div *ngIf="item.progress < 100">
+                    <button mat-icon-button *ngIf="!item.isPaused" (click)="setUploadPlayerState($event, true, i)">
+                        <mat-icon color="primary">pause</mat-icon>
+                    </button>
+                    
+                    <button mat-icon-button *ngIf="item.isPaused" (click)="setUploadPlayerState($event, false, i)">
+                        <mat-icon color="accent">play_arrow</mat-icon>
+                    </button>
+                </div>
+                <ng-container 
+                    *ngTemplateOutlet="(getFileState$(i) | async).progress === 100 ? done : loading; context: { index: i, color: item.color }"
+                ></ng-container>
+            </div>
+        </div>
+    
+        <div class="list-progress-bar">
+            <upload-progress [progress]="item.progress" [key]="i" [color]="getProgressColor$(i) | async"></upload-progress>
         </div>
     </div>
-    <div class="row mt-3 p-2">
-        <div class="col-auto ml-auto mt-auto">
-            <input hidden multiple type="file" (change)="uploadFiles($event)" #uploader>
-            <button mat-raised-button color="primary" class="ml-2" (click)="uploader.click()">Add more files</button>
-            <button mat-raised-button class="ml-2" (click)="closeDialog()">Done</button>
-        </div>
-    </div>
+</div>
+
+<div mat-dialog-actions class="upload-dialog-actions">
+    <input hidden multiple type="file" (change)="uploadFiles($event)" #uploader>
+    <button mat-raised-button color="primary" class="ml-2" (click)="uploader.click()">Add more files</button>
+    <button mat-raised-button class="ml-2" (click)="closeDialog()">Done</button>
 </div>
 
 <ng-template let-index="index" #done>
@@ -55,9 +53,9 @@
 </ng-template>
 
 
-<ng-template let-index="index" #loading>
+<ng-template let-index="index" let-color="color" #loading>
     <button mat-icon-button class="mr-0 px-0" (click)="cancelUpload($event, index)">
-        <mat-icon [color]="getProgressColor$(index) | async">close</mat-icon>
+        <mat-icon [color]="color">close</mat-icon> <!-- [color]="getProgressColor$(index) | async" -->
     </button>
 </ng-template>
 
