--- a/src/app/modules/dashboard/components/upload-details/upload-details.component.less
+++ b/src/app/modules/dashboard/components/upload-details/upload-details.component.less
@@ -17,6 +17,12 @@
     overflow-y: auto;
 }
 
+.actions-player {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 .upload-dialog-title {
     margin-bottom: 10px;
 }
